Fix screencasting on Android with Viz enabled

Use video capture for screencasting. Also ship top controls height and
shown ratio.

Bug: 865430
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I6cc7b945fb2937a6552c33ca8b5be10b566a48e1
Reviewed-on: https://chromium-review.googlesource.com/1145231
Reviewed-by: Saman Sami <samans@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Reviewed-by: Thomas Guilbert <tguilbert@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Saman Sami <samans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577048}
Former-commit-id: b2e7b3e635af6d9fcf7928d30f6887c9d3fae692